# openzt

./: AGENTS.md  CLAUDE.md  Cargo.toml  config.toml  detour.lua  openzt.bat  rust-toolchain.toml  rustfmt.toml  test_meta.toml
.claude/: settings.local.json
egui-tiny-skia/: Cargo.toml  README.md
egui-tiny-skia/examples/: render_png.rs
egui-tiny-skia/src/: lib.rs  painter.rs  texture.rs
egui-tiny-skia/tests/: render.rs
field_accessor_as_string/src/: lib.rs
field_accessor_as_string/tests/: test.rs
field_accessor_as_string_trait/src/: lib.rs
openzt/: Cargo.toml  build.rs
openzt-configparser/src/: ini.rs
openzt-configparser/tests/: test.rs
openzt-console/: Cargo.toml
openzt-console/src/: main.rs
openzt-detour/: Cargo.toml  add_validation_macros.py
openzt-detour-macro/examples/: example.rs
openzt-detour-macro/src/: lib.rs
openzt-detour/src/: generated.rs  lib.rs  structs.rs
openzt-dll/: Cargo.toml
openzt-dll/src/: lib.rs
openzt-instance-manager/: Cargo.toml  README.md  config.toml  install.ps1  install.sh  uninstall.ps1  uninstall.sh
openzt-instance-manager/src/: client.rs  client_config.rs  config.rs  docker.rs  id_resolver.rs  instance.rs  lib.rs  main.rs  output.rs  ports.rs  routes.rs  state.rs
openzt-test-dll/: Cargo.toml
openzt-test-dll/src/: lib.rs
openzt/resources/test/loading-order-test/defs/: 50-mixed-content.toml  51-second-mixed.toml  99-patches-only.toml
openzt/resources/test/patch_source_resolution/: meta.toml
openzt/resources/test/patch_source_resolution/defs/: 01-patches.toml
openzt/resources/test/patch_source_resolution/resources/: test_merge_source.ai  test_multi_source.ai  test_replace_source.ai
openzt/scripts/: detour_test_automation.py  detour_test_config.toml
openzt/src/: bfentitytype.rs  bfregistry.rs  bugfix.rs  capture_ztlog.rs  command_console.rs  cursors.rs  detour_validation.rs  dll_dependencies.rs  encoding_utils.rs  expansions.rs  experimental.rs  globals.rs  lib.rs  logging.rs  mods.rs  resource_manager.rs  roofs.rs  runtime_state.rs  save_logging.rs  scripting.rs  settings.rs  shortcuts.rs  string_registry.rs  tui_console.rs  util.rs  version.rs  ztadvterrainmgr.rs  ztgamemgr.rs  zthabitatmgr.rs  ztmapview.rs  ztui.rs  ztworldmgr.rs
openzt/src/integration_tests/: dependency_resolution.rs  disabled_ztd.rs  extensions.rs  legacy_attributes.rs  loading_order.rs  mod.rs  patch_conditions.rs  patch_rollback.rs  patch_source_resolution.rs  permitted_archive_patterns.rs  shortcuts.rs  unified_loading_order.rs
openzt/src/reimplementation_tests/: mod.rs
openzt/src/resource_manager/: bfresourcemgr.rs  commands.rs  dependency_resolver.rs  handlers.rs  hooks.rs  lazyresourcemap.rs  legacy_loading.rs  mod_config.rs  openzt_mods.rs  validation.rs  ztfile.rs
openzt/src/resource_manager/openzt_mods/: entity_lookup.rs  extensions.rs  habitats_locations.rs  legacy_attributes.rs  loading.rs  patches.rs  ztd_registry.rs
openzt/src/settings/: ai.rs  debug.rs  util.rs  zoo_ini.rs
openzt/src/ui/: blit.rs  cursor.rs  date_display.rs  input_block.rs  live_game.rs  mod.rs  money_display.rs  pause.rs  render_hook.rs  status_display.rs  tga.rs  tooltip.rs  vanilla_main.rs  wndproc.rs  zoom_block.rs  zt_image.rs
