[package]
name = "openzt-instance-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
# API server dependencies
axum = "0.8"
bollard = "0.18"
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
toml = "0.8"
anyhow = "1.0"

# CLI dependencies (optional)
clap = { version = "4.5", features = ["derive"], optional = true }
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
miette = { version = "7.4", features = ["fancy"], optional = true }
console = "0.15"
tabled = "0.17"
directories = "5.0"

[features]
default = []
cli = ["clap", "reqwest", "miette"]

[[bin]]
name = "openzt-instance-manager"
path = "src/main.rs"

[[bin]]
name = "openzt"
path = "src/bin/openzt.rs"
required-features = ["cli"]
