[package]
name = "openzt-test-dll"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
openzt = { path = "../openzt", version = "0.1.0", features = ["reimplementation-tests"] }

[target.'cfg(windows)'.dependencies]
windows =  { version = "0.61.3", features = ["Win32", "Win32_System_Console", "Win32_System_SystemServices"]}

[lib]
name = "openzttest"
crate-type = ["cdylib"]